@@ -1,12 +1,14 @@
 package com.pd.im.common.util;
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+
 
 import java.io.IOException;
 import java.nio.charset.Charset;
+import java.util.Base64;
+
+
 public class Base64URL {
     public static byte[] base64EncodeUrl(byte[] input) {
-        byte[] base64 = new BASE64Encoder().encode(input).getBytes();
+        byte[] base64 = Base64.getEncoder().encode(input);
         for (int i = 0; i < base64.length; ++i) {
             switch (base64[i]) {
                 case '+':
@@ -26,7 +28,7 @@ public class Base64URL {
     }
 
     public static byte[] base64EncodeUrlNotReplace(byte[] input) {
-        byte[] base64 = new BASE64Encoder().encode(input).getBytes(Charset.forName("UTF-8"));
+        byte[] base64 = Base64.getEncoder().encode(input);
         for (int i = 0; i < base64.length; ++i)
             switch (base64[i]) {
                 case '+':
@@ -59,7 +61,7 @@ public class Base64URL {
                 default:
                     break;
             }
-        return new BASE64Decoder().decodeBuffer(new String(input,"UTF-8"));
+        return Base64.getDecoder().decode(input); 
     }
 
     public static byte[] base64DecodeUrl(byte[] input) throws IOException {
@@ -78,6 +80,6 @@ public class Base64URL {
                 default:
                     break;
             }
-        return new BASE64Decoder().decodeBuffer(base64.toString());
+        return Base64.getDecoder().decode(base64);
     }
 }
